# src/routes/fields.ts
@@ -1,0 +1,11 @@
+import { Router } from 'express';
+import { PrivateController } from '../controllers/fields';
+
+const router = {
+  private: Router(),
+};
+
+router.private.get('/fields_types', PrivateController.getFieldsTypes);
+
+
+export default router;
